src/gen/grammar/myGrammarParser.java
// Generated from C:/Users/joãocarlos/IdeaProjects/TrabLFA/src/grammar\myGrammar.g4 by ANTLR 4.5.1
package gen.grammar;

import com.company.data.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class myGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, WS=49, NUM=50, NUMERO=51, NULL=52;
	public static final int
		RULE_init = 0, RULE_prog = 1, RULE_logica = 2, RULE_condicao = 3, RULE_laco = 4, 
		RULE_verificacao = 5, RULE_comando = 6, RULE_operadorE = 7, RULE_operadorOU = 8, 
		RULE_negacao = 9;
	public static final String[] ruleNames = {
		"init", "prog", "logica", "condicao", "laco", "verificacao", "comando", 
		"operadorE", "operadorOU", "negacao"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'INICIAR'", "'FIM_DO_PROGRAMA'", "'SE_('", "')_FOR_VERDADE:'", 
		"'FIM_DO_SE'", "')_FOR_FALSO:'", "'SENAO:'", "'FIM_DO_SENAO'", "'ENQUANTO_('", 
		"'FIM_DO_ENQUANTO'", "'REPITA_('", "')_VEZES:'", "'FIM_DO_REPITA'", "'NAO_EXISTE_NADA_A_FRENTE'", 
		"'EXISTE_OBJETO_A_DIREITA'", "'EXISTE_OBJETO_A_ESQUERDA'", "'SENSOR_LINHA_DIREITA_RECONHECEU'", 
		"'SENSOR_LINHA_MEIO_RECONHECEU'", "'SENSOR_LINHA_ESQUERDA_RECONHECEU'", 
		"'AGARROU_OBJETO'", "'ESTA_PARADO'", "'ESTA_ANDANDO'", "'CHEGOU_NO_OBJETIVO'", 
		"'VERDADEIRO'", "'FALSO'", "'VIRAR_PARA_DIREITA'", "'VIRAR_PARA_ESQUERDA'", 
		"'ANDAR_PARA_FRENTE'", "'ANDAR_PARA_TRAS'", "'PARAR'", "'ANDAR_PARA_FRENTE_POR_('", 
		"')_SEGUNDOS'", "'ABRIR_GARRA'", "'ABRIR_GARRA_('", "')_GRAUS'", "'FECHAR_GARRA'", 
		"'LIGAR_MOTOR_DIREITA'", "'LIGAR_MOTOR_ESQUERDA'", "'DESLIGAR_MOTOR_ESQUERDA'", 
		"'DESLIGAR_MOTOR_DIREITA'", "'_E_'", "'E'", "'_E_TAMBEM_'", "'_OU_'", 
		"'OU'", "'NAO_'", "'E_FALSO_QUE'", "'O_CONTRARIO_DE_'", null, null, null, 
		"' '"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "WS", "NUM", "NUMERO", "NULL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "myGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public myGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InitContext extends ParserRuleContext {
		public Code result;
		public ProgContext p;
		public ProgContext prog() {
			return getRuleContext(ProgContext.class,0);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof myGrammarListener ) ((myGrammarListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof myGrammarListener ) ((myGrammarListener)listener).exitInit(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(20);
			((InitContext)_localctx).p = prog();
			((InitContext)_localctx).result =  ((InitContext)_localctx).p.result;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgContext extends ParserRuleContext {
		public Code result;
		public LogicaContext b;
		public LogicaContext logica() {
			return getRuleContext(LogicaContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof myGrammarListener ) ((myGrammarListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof myGrammarListener ) ((myGrammarListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(23);
			match(T__0);
			setState(24);
			((ProgContext)_localctx).b = logica(0);
			setState(25);
			match(T__1);
			 ((ProgContext)_localctx).result =  Body.mkBody(((ProgContext)_localctx).b.result);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicaContext extends ParserRuleContext {
		public Code result;
		public LogicaContext t1;
		public CondicaoContext cd;
		public LacoContext l;
		public ComandoContext co;
		public LogicaContext t2;
		public CondicaoContext condicao() {
			return getRuleContext(CondicaoContext.class,0);
		}
		public LacoContext laco() {
			return getRuleContext(LacoContext.class,0);
		}
		public ComandoContext comando() {
			return getRuleContext(ComandoContext.class,0);
		}
		public List<LogicaContext> logica() {
			return getRuleContexts(LogicaContext.class);
		}
		public LogicaContext logica(int i) {
			return getRuleContext(LogicaContext.class,i);
		}
		public LogicaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logica; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof myGrammarListener ) ((myGrammarListener)listener).enterLogica(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof myGrammarListener ) ((myGrammarListener)listener).exitLogica(this);
		}
	}

	public final LogicaContext logica() throws RecognitionException {
		return logica(0);
	}

	private LogicaContext logica(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		LogicaContext _localctx = new LogicaContext(_ctx, _parentState);
		LogicaContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_logica, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			switch (_input.LA(1)) {
			case T__2:
			case T__6:
				{
				setState(29);
				((LogicaContext)_localctx).cd = condicao();
				((LogicaContext)_localctx).result =  ((LogicaContext)_localctx).cd.result;
				}
				break;
			case T__8:
			case T__10:
				{
				setState(32);
				((LogicaContext)_localctx).l = laco();
				((LogicaContext)_localctx).result =  ((LogicaContext)_localctx).l.result;
				}
				break;
			case T__25:
			case T__26:
			case T__27:
			case T__28:
			case T__29:
			case T__30:
			case T__32:
			case T__33:
			case T__35:
			case T__36:
			case T__37:
			case T__38:
			case T__39:
				{
				setState(35);
				((LogicaContext)_localctx).co = comando();
				((LogicaContext)_localctx).result =  ((LogicaContext)_localctx).co.result;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(46);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new LogicaContext(_parentctx, _parentState);
					_localctx.t1 = _prevctx;
					_localctx.t1 = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_logica);
					setState(40);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(41);
					((LogicaContext)_localctx).t2 = logica(2);
					((LogicaContext)_localctx).result =  Logica.concatLogica(((LogicaContext)_localctx).t1.result,((LogicaContext)_localctx).t2.result);
					}
					} 
				}
				setState(48);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class CondicaoContext extends ParserRuleContext {
		public Code result;
		public VerificacaoContext v0;
		public LogicaContext l0;
		public VerificacaoContext v1;
		public LogicaContext l1;
		public LogicaContext l2;
		public VerificacaoContext verificacao() {
			return getRuleContext(VerificacaoContext.class,0);
		}
		public LogicaContext logica() {
			return getRuleContext(LogicaContext.class,0);
		}
		public CondicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof myGrammarListener ) ((myGrammarListener)listener).enterCondicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof myGrammarListener ) ((myGrammarListener)listener).exitCondicao(this);
		}
	}

	public final CondicaoContext condicao() throws RecognitionException {
		CondicaoContext _localctx = new CondicaoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_condicao);
		try {
			setState(68);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				match(T__2);
				setState(50);
				((CondicaoContext)_localctx).v0 = verificacao(0);
				setState(51);
				match(T__3);
				setState(52);
				((CondicaoContext)_localctx).l0 = logica(0);
				setState(53);
				match(T__4);
				((CondicaoContext)_localctx).result =  Condicao.mkCondicao(0,((CondicaoContext)_localctx).v0.result,((CondicaoContext)_localctx).l0.result);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				match(T__2);
				setState(57);
				((CondicaoContext)_localctx).v1 = verificacao(0);
				setState(58);
				match(T__5);
				setState(59);
				((CondicaoContext)_localctx).l1 = logica(0);
				setState(60);
				match(T__4);
				((CondicaoContext)_localctx).result =  Condicao.mkCondicao(1,((CondicaoContext)_localctx).v1.result,((CondicaoContext)_localctx).l1.result);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(63);
				match(T__6);
				setState(64);
				((CondicaoContext)_localctx).l2 = logica(0);
				setState(65);
				match(T__7);
				((CondicaoContext)_localctx).result =  Condicao.mkCondicao(((CondicaoContext)_localctx).l2.result);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LacoContext extends ParserRuleContext {
		public Code result;
		public VerificacaoContext v;
		public LogicaContext l0;
		public Token NUMERO;
		public LogicaContext l1;
		public VerificacaoContext verificacao() {
			return getRuleContext(VerificacaoContext.class,0);
		}
		public LogicaContext logica() {
			return getRuleContext(LogicaContext.class,0);
		}
		public TerminalNode NUMERO() { return getToken(myGrammarParser.NUMERO, 0); }
		public LacoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_laco; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof myGrammarListener ) ((myGrammarListener)listener).enterLaco(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof myGrammarListener ) ((myGrammarListener)listener).exitLaco(this);
		}
	}

	public final LacoContext laco() throws RecognitionException {
		LacoContext _localctx = new LacoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_laco);
		try {
			setState(84);
			switch (_input.LA(1)) {
			case T__8:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				match(T__8);
				setState(71);
				((LacoContext)_localctx).v = verificacao(0);
				setState(72);
				match(T__3);
				setState(73);
				((LacoContext)_localctx).l0 = logica(0);
				setState(74);
				match(T__9);
				((LacoContext)_localctx).result =  Laco.mkEnquanto(((LacoContext)_localctx).v.result,((LacoContext)_localctx).l0.result);
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				match(T__10);
				setState(78);
				((LacoContext)_localctx).NUMERO = match(NUMERO);
				setState(79);
				match(T__11);
				setState(80);
				((LacoContext)_localctx).l1 = logica(0);
				setState(81);
				match(T__12);
				((LacoContext)_localctx).result =  Laco.mkFor((((LacoContext)_localctx).NUMERO!=null?((LacoContext)_localctx).NUMERO.getText():null),((LacoContext)_localctx).l1.result);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VerificacaoContext extends ParserRuleContext {
		public Code result;
		public VerificacaoContext v1;
		public VerificacaoContext v;
		public VerificacaoContext v2;
		public NegacaoContext negacao() {
			return getRuleContext(NegacaoContext.class,0);
		}
		public List<VerificacaoContext> verificacao() {
			return getRuleContexts(VerificacaoContext.class);
		}
		public VerificacaoContext verificacao(int i) {
			return getRuleContext(VerificacaoContext.class,i);
		}
		public OperadorEContext operadorE() {
			return getRuleContext(OperadorEContext.class,0);
		}
		public OperadorOUContext operadorOU() {
			return getRuleContext(OperadorOUContext.class,0);
		}
		public VerificacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_verificacao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof myGrammarListener ) ((myGrammarListener)listener).enterVerificacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof myGrammarListener ) ((myGrammarListener)listener).exitVerificacao(this);
		}
	}

	public final VerificacaoContext verificacao() throws RecognitionException {
		return verificacao(0);
	}

	private VerificacaoContext verificacao(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		VerificacaoContext _localctx = new VerificacaoContext(_ctx, _parentState);
		VerificacaoContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_verificacao, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			switch (_input.LA(1)) {
			case T__45:
			case T__46:
			case T__47:
				{
				setState(87);
				negacao();
				setState(88);
				((VerificacaoContext)_localctx).v = verificacao(3);
				((VerificacaoContext)_localctx).result =  Verificacao.mkNotVerif(((VerificacaoContext)_localctx).v.result);
				}
				break;
			case T__13:
				{
				setState(91);
				match(T__13);
				((VerificacaoContext)_localctx).result =  Verificacao.mkVerif("NAO_EXISTE_NADA_A_FRENTE");
				}
				break;
			case T__14:
				{
				setState(93);
				match(T__14);
				((VerificacaoContext)_localctx).result =  Verificacao.mkVerif("EXISTE_OBJETO_A_DIREITA");
				}
				break;
			case T__15:
				{
				setState(95);
				match(T__15);
				((VerificacaoContext)_localctx).result =  Verificacao.mkVerif("EXISTE_OBJETO_A_ESQUERDA");
				}
				break;
			case T__16:
				{
				setState(97);
				match(T__16);
				((VerificacaoContext)_localctx).result =  Verificacao.mkVerif("SENSOR_LINHA_DIREITA_RECONHECEU");
				}
				break;
			case T__17:
				{
				setState(99);
				match(T__17);
				((VerificacaoContext)_localctx).result =  Verificacao.mkVerif("SENSOR_LINHA_MEIO_RECONHECEU");
				}
				break;
			case T__18:
				{
				setState(101);
				match(T__18);
				((VerificacaoContext)_localctx).result =  Verificacao.mkVerif("SENSOR_LINHA_ESQUERDA_RECONHECEU");
				}
				break;
			case T__19:
				{
				setState(103);
				match(T__19);
				((VerificacaoContext)_localctx).result =  Verificacao.mkVerif("AGARROU_OBJETO");
				}
				break;
			case T__20:
				{
				setState(105);
				match(T__20);
				((VerificacaoContext)_localctx).result =  Verificacao.mkVerif("ESTA_PARADO");
				}
				break;
			case T__21:
				{
				setState(107);
				match(T__21);
				((VerificacaoContext)_localctx).result =  Verificacao.mkVerif("ESTA_ANDANDO");
				}
				break;
			case T__22:
				{
				setState(109);
				match(T__22);
				((VerificacaoContext)_localctx).result =  Verificacao.mkVerif("CHEGOU_NO_OBJETIVO");
				}
				break;
			case T__23:
				{
				setState(111);
				match(T__23);
				((VerificacaoContext)_localctx).result =  Verificacao.mkVerif("VERDADEIRO");
				}
				break;
			case T__24:
				{
				setState(113);
				match(T__24);
				((VerificacaoContext)_localctx).result =  Verificacao.mkVerif("FALSO");
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(129);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(127);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						_localctx = new VerificacaoContext(_parentctx, _parentState);
						_localctx.v1 = _prevctx;
						_localctx.v1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_verificacao);
						setState(117);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(118);
						operadorE();
						setState(119);
						((VerificacaoContext)_localctx).v2 = verificacao(3);
						((VerificacaoContext)_localctx).result =  Verificacao.mkAndVerif(((VerificacaoContext)_localctx).v1.result,((VerificacaoContext)_localctx).v2.result);
						}
						break;
					case 2:
						{
						_localctx = new VerificacaoContext(_parentctx, _parentState);
						_localctx.v1 = _prevctx;
						_localctx.v1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_verificacao);
						setState(122);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(123);
						operadorOU();
						setState(124);
						((VerificacaoContext)_localctx).v2 = verificacao(2);
						((VerificacaoContext)_localctx).result =  Verificacao.mkOrVerif(((VerificacaoContext)_localctx).v1.result,((VerificacaoContext)_localctx).v2.result);
						}
						break;
					}
					} 
				}
				setState(131);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ComandoContext extends ParserRuleContext {
		public Code result;
		public Token NUMERO;
		public TerminalNode NUMERO() { return getToken(myGrammarParser.NUMERO, 0); }
		public ComandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof myGrammarListener ) ((myGrammarListener)listener).enterComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof myGrammarListener ) ((myGrammarListener)listener).exitComando(this);
		}
	}

	public final ComandoContext comando() throws RecognitionException {
		ComandoContext _localctx = new ComandoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_comando);
		try {
			setState(162);
			switch (_input.LA(1)) {
			case T__25:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				match(T__25);
				((ComandoContext)_localctx).result =  Comando.mkComando("VIRAR_PARA_DIREITA");
				}
				break;
			case T__26:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				match(T__26);
				((ComandoContext)_localctx).result =  Comando.mkComando("VIRAR_PARA_ESQUERDA");
				}
				break;
			case T__27:
				enterOuterAlt(_localctx, 3);
				{
				setState(136);
				match(T__27);
				((ComandoContext)_localctx).result =  Comando.mkComando("ANDAR_PARA_FRENTE");
				}
				break;
			case T__28:
				enterOuterAlt(_localctx, 4);
				{
				setState(138);
				match(T__28);
				((ComandoContext)_localctx).result =  Comando.mkComando("ANDAR_PARA_TRAS");
				}
				break;
			case T__29:
				enterOuterAlt(_localctx, 5);
				{
				setState(140);
				match(T__29);
				((ComandoContext)_localctx).result =  Comando.mkComando("PARAR");
				}
				break;
			case T__30:
				enterOuterAlt(_localctx, 6);
				{
				setState(142);
				match(T__30);
				setState(143);
				((ComandoContext)_localctx).NUMERO = match(NUMERO);
				setState(144);
				match(T__31);
				((ComandoContext)_localctx).result =  Comando.mkComandoParam((((ComandoContext)_localctx).NUMERO!=null?((ComandoContext)_localctx).NUMERO.getText():null),0);
				}
				break;
			case T__32:
				enterOuterAlt(_localctx, 7);
				{
				setState(146);
				match(T__32);
				((ComandoContext)_localctx).result =  Comando.mkComando("ABRIR_GARRA");
				}
				break;
			case T__33:
				enterOuterAlt(_localctx, 8);
				{
				setState(148);
				match(T__33);
				setState(149);
				((ComandoContext)_localctx).NUMERO = match(NUMERO);
				setState(150);
				match(T__34);
				((ComandoContext)_localctx).result =  Comando.mkComandoParam((((ComandoContext)_localctx).NUMERO!=null?((ComandoContext)_localctx).NUMERO.getText():null),1);
				}
				break;
			case T__35:
				enterOuterAlt(_localctx, 9);
				{
				setState(152);
				match(T__35);
				((ComandoContext)_localctx).result =  Comando.mkComando("FECHAR_GARRA");
				}
				break;
			case T__36:
				enterOuterAlt(_localctx, 10);
				{
				setState(154);
				match(T__36);
				((ComandoContext)_localctx).result =  Comando.mkComando("LIGAR_MOTOR_DIREITA");
				}
				break;
			case T__37:
				enterOuterAlt(_localctx, 11);
				{
				setState(156);
				match(T__37);
				((ComandoContext)_localctx).result =  Comando.mkComando("LIGAR_MOTOR_ESQUERDA");
				}
				break;
			case T__38:
				enterOuterAlt(_localctx, 12);
				{
				setState(158);
				match(T__38);
				((ComandoContext)_localctx).result =  Comando.mkComando("DESLIGAR_MOTOR_ESQUERDA");
				}
				break;
			case T__39:
				enterOuterAlt(_localctx, 13);
				{
				setState(160);
				match(T__39);
				((ComandoContext)_localctx).result =  Comando.mkComando("DESLIGAR_MOTOR_DIREITA");
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperadorEContext extends ParserRuleContext {
		public OperadorEContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operadorE; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof myGrammarListener ) ((myGrammarListener)listener).enterOperadorE(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof myGrammarListener ) ((myGrammarListener)listener).exitOperadorE(this);
		}
	}
